[package]
name = "deepfinder"
version = "0.1.0"
edition = "2021"
authors = ["Xen0rInspire"]
license = "MIT"
description = "A low level Rust tool to find duplicates in large directories."

[dependencies]
clap = { version = "4.5.32", features = ["std"], default-features = false }
num_cpus = { version = "1.16.0", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
sha-1 = { version = "0.10.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
sha3 = { version = "0.10.8", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
whirlpool = { version = "0.10.4", default-features = false }
