[package]
name = "deepfinder"
version = "0.1.0"
edition = "2024"
authors = ["Xen0rInspire"]
license = "MIT"
description = "A low level Rust tool to find duplicates in large directories."
keywords = ["deepfinder", "duplicate", "finder", "hash", "file", "directory"]

[dependencies]
clap = { version = "4.5.48", features = ["std"], default-features = false }
num_cpus = { version = "1.17.0", default-features = false }
serde_json = { version = "1.0.145", features = ["std"], default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
csv = { version = "1.3.1", default-features = false }
serde-xml-rs = { version = "0.8.1", default-features = false }
md-5 = { version = "0.10.6", default-features = false }
sha-1 = { version = "0.10.1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
sha3 = { version = "0.10.8", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
whirlpool = { version = "0.10.4", default-features = false }
